--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Apenas um projeto de implementacao do https://www.tabnews.com.br para o https://curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
@@ -13,5 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-youtube": "^10.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
