--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
@@ -17,6 +19,7 @@
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
+    "jest": "^29.6.2",
     "prettier": "^2.8.8"
   }
 }
